Rebuild chapter 4 exercise structure from pedagogical prompt